# pybuild23

./: .gitignore  .isort.cfg  .pypirc.template  LICENSE  LICENSE.md  Makefile  PYBUILD_QUICKSTART  PYBUILD_QUICKSTART.md  PYBUILD_README.md  QUICKSTART.md  README-pybuild.md  README.md  TODO.md  UPGRADING.md  edit-pip-ini  edit-requirements  edit-requirements.sh  hotfix.sh  packages.tgz  pybuild  pybuild.mk  pyetc  pypirc.sample  pyvenv  setup.cfg
etc/: interactive  pip.ini  pip.ini.example
examples/: Makefile
pybuild/: .gitignore  LICENSE  Makefile  PYBUILD_DEVELOPMENT_GUIDE.md  README.md  hotfix.sh  pybuild  upgrade_packages_from_master.sh
pybuild.dir/: .gitignore  Makefile  QUICKSTART.md
pybuild/etc/: pip.ini
