 [pycodestyle]
select =
ignore = E501,W605

[flake8]
max-line-length = 140

[clean]
all = 1

[easy_install]
index_url = https://artifacts.jotreal.net/api/pypi/python-local/simple
zip_ok = False

[distutils]
index-servers = https://artifacts.notreal.net/api/pypi/python-local/simple

[metadata]
license-file = LICENSE

[pylintrc]
ignore=.git,venv,packages,Makefile,README.md,etc,pybuild

[isort]
force_single_line_imports = true
combine_as_imports = true
default_section = {{ your package directory }}
include_trailing_comma = False
known_first_party = {{ your package full name }}
line_length = 79
multi_line_output = 5
not_skip = __init__.py
skip = packages/,venv/,build
indent = '    '
recursive = yes
sections = FUTURE,STDLIB,{{ YOUR_PACKAGE_FULL_NAME }},THIRDPARTY,FIRSTPARTY,LOCALFOLDER