#
# Example setup.cfg if you want to use it as a template or reference
#

[pycodestyle]
# select =
ignore = E501,W605

[flake8]
max-line-length = 140

[clean]
all = 1

[setuptools]
verbose=0

[metadata]
name=pybuild23
version=1.0
license-file = LICENSE
description-content-type = text/plain; charset=UTF-8
requires-python = >=2.6
# description-file =
#    README.txt
#    CHANGES.txt
summary = Deployment tool for Python applications and services in dev, qa and prod environments
requires-dist = setuptools
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
	Topic :: System :: Software Distribution
	Topic :: System :: Installation/Setup
	Topic :: Utilities


[isort]
combine_as_imports = true
default_section = . # your package full directory
include_trailing_comma = False
known_first_party = # your package pip/full name
line_length = 1
# force_grid_wrap = true
multi_line_output = 3
not_skip = __init__.py
skip = packages/,venv/,build
indent = '    '
recursive = no
sections = FUTURE,STDLIB,pybuild23,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

