#
# Example setup.cfg if you want to use it as a template or reference
#

# You should use versioneer if you use git based source control
[versioneer]
VCS = git
style = pep440
versionfile_source = yourproject/_version.py
versionfile_build = yourproject/_version.py
tag_prefix = ''
# If you use a namespace within a company, to avoid internal/external
# package naming collision
#
# Example: exxon.infra.
parentdir_prefix = company.group.

[pycodestyle]
# select =
ignore = E501,W605

[flake8]
max-line-length = 140

[clean]
all = 1

[metadata]
name=pybuild23
version=1.0
license-file = LICENSE
description-content-type = text/plain; charset=UTF-8
requires-python = >=2.6
# description-file =
#    README.txt
#    CHANGES.txt
summary = Deployment tool for Python applications and services in dev, qa and prod environments
requires-dist = setuptools
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
	Topic :: System :: Software Distribution
	Topic :: System :: Installation/Setup
	Topic :: Utilities


